# SpaceExplorer

./: .cz.toml  Cargo.toml  README.md  diesel.toml
.github/workflows/: ci.yml  release.yml
collector/: Cargo.toml
collector/migrations/2026-07-01-092820-0000_initial_schema/: down.sql  up.sql
collector/src/: database.rs  db.rs  lib.rs  main.rs  schema.rs
