[workspace]
members = ["collector"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DMustache/SpaceExplorer"
readme = "README.md"
rust-version = "1.96.1"

[workspace.dependencies]
chrono = "0.4.42"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.3.10", features = ["chrono", "postgres", "serde_json", "uuid"] }
diesel_migrations = { version = "2.3.2", features = ["postgres"] }
serde_json = "1.0.147"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.23.4", features = ["v4"] }
